// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decoration Decoration * overflow: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-10",
        ],
        "nodes": Array [
          Object {
            "raw": "11*",
            "text": "11*",
            "type": "plain",
          },
        ],
        "raw": "[*********** 11*]",
        "rawDecos": "***********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration similar with externalLink: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "hoge ",
            "text": "hoge ",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "https://example.com",
            "pathType": "absolute",
            "raw": "https://example.com",
            "type": "link",
          },
        ],
        "raw": "[* hoge https://example.com]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with hashTag: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "#tag",
            "text": "#tag",
            "type": "plain",
          },
        ],
        "raw": "[* #tag]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with many [ and link: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "!",
        ],
        "nodes": Array [
          Object {
            "raw": "[[[[[",
            "text": "[[[[[",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "a",
            "pathType": "relative",
            "raw": "[a]",
            "type": "link",
          },
        ],
        "raw": "[! [[[[[[a]]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with many [: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "!",
        ],
        "nodes": Array [
          Object {
            "raw": "[[[[[[a",
            "text": "[[[[[[a",
            "type": "plain",
          },
        ],
        "raw": "[! [[[[[[a]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with strong icon notation (it's just icon, not strong): toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "progfay.icon",
            "pathType": "relative",
            "raw": "[progfay.icon]",
            "type": "link",
          },
        ],
        "raw": "[* [[progfay.icon]]",
        "rawDecos": "*",
        "type": "decoration",
      },
      Object {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with strong image notation (it's just image, not strong): toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          Object {
            "link": "",
            "raw": "[https://example.com/image.png]",
            "src": "https://example.com/image.png",
            "type": "image",
          },
        ],
        "raw": "[* [[https://example.com/image.png]]",
        "rawDecos": "*",
        "type": "decoration",
      },
      Object {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with strong notation (it's just link): toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "link",
            "pathType": "relative",
            "raw": "[link]",
            "type": "link",
          },
        ],
        "raw": "[* [[link]]",
        "rawDecos": "*",
        "type": "decoration",
      },
      Object {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Simple decoration: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[* deco]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-2",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[** deco]",
        "rawDecos": "**",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-3",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[*** deco]",
        "rawDecos": "***",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-4",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[**** deco]",
        "rawDecos": "****",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-5",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[***** deco]",
        "rawDecos": "*****",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-6",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[****** deco]",
        "rawDecos": "******",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-7",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[******* deco]",
        "rawDecos": "*******",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-8",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[******** deco]",
        "rawDecos": "********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-9",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[********* deco]",
        "rawDecos": "*********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-10",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[********** deco]",
        "rawDecos": "**********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "!",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[! deco]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "\\"",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[\\" deco]",
        "rawDecos": "\\"",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "#",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[# deco]",
        "rawDecos": "#",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "%",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[% deco]",
        "rawDecos": "%",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "&",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[& deco]",
        "rawDecos": "&",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "'",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[' deco]",
        "rawDecos": "'",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "(",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[( deco]",
        "rawDecos": "(",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ")",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[) deco]",
        "rawDecos": ")",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "+",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[+ deco]",
        "rawDecos": "+",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ",",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[, deco]",
        "rawDecos": ",",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "-",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[- deco]",
        "rawDecos": "-",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ".",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[. deco]",
        "rawDecos": ".",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "/",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[/ deco]",
        "rawDecos": "/",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "{",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[{ deco]",
        "rawDecos": "{",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "|",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[| deco]",
        "rawDecos": "|",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "}",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[} deco]",
        "rawDecos": "}",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "<",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[< deco]",
        "rawDecos": "<",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          ">",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[> deco]",
        "rawDecos": ">",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "_",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[_ deco]",
        "rawDecos": "_",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "~",
        ],
        "nodes": Array [
          Object {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[~ deco]",
        "rawDecos": "~",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;
